# dancing-bear

./: .bandit  .coveragerc  .envrc  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  COPILOT.md  GEMINI.md  GETTING_STARTED.md  LICENSE  Makefile  README.md  SECURITY.md  pii-paths-to-remove.txt  pyproject.toml  requirements.txt
.github/: .gitmessage  CLAUDE_REVIEW.md  CODEOWNERS  COMMIT_CONVENTION.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.llm/: AGENTIC_BUDGETS.yaml  AGENTIC_SCHEMAS.json  AGENTS_CAPSULE.yaml  BOOTSTRAP_CAPSULE.example.yaml  COMMANDS.md  CONTEXT.md  FAMILIARIZE_CORE.md  FLOWS.generated.yaml  FLOWS.yaml  IDEAL_ASSISTANT_CHECKLIST.md  INVENTORY.md  MIGRATION_CAPSULE.yaml  MIGRATION_CHECKLIST.md  MIGRATION_STATE.md  PATTERNS.md  PIPELINE_MIGRATION.md  PR_POLICIES.yaml  PR_TEMPLATE_GUIDE.md  PR_WORKFLOW.md  QUICK_START.md  README.md  ROADMAP_CAPSULE.yaml  familiarize.json  familiarize.yaml
.qlty/: .gitignore  SECURITY.md  qlty.toml
apple_music/: __main__.py  cli.py  config.py  token_helpers.py  user_token_cli.py
apple_music_assistant/: __init__.py  __main__.py  cli.py  client.py  user_token_cli.py
calendar/: __init__.py  agentic.py  helpers.py  outlook_pipelines.py  pipeline.py
calendar_assistant/: AGENTS.md  README.md  __main__.py  agentic.py  context.py  gmail_pipelines.py  gmail_service.py  helpers.py  importer.py  llm_cli.py  location_sync.py  locations_map.py  outlook_pipelines.py  pipeline.py  pipeline_base.py  scan_common.py  text_utils.py  yamlio.py
calendars/: AGENTS.md  README.md  __init__.py  __main__.py  agentic.py  constants.py  context.py  gmail_pipelines.py  gmail_service.py  helpers.py  importer.py  llm_cli.py  location_sync.py  locations_map.py  model.py  outlook_pipelines.py  outlook_service.py  pipeline.py  pipeline_base.py  scan_common.py  selection.py  text_utils.py  yamlio.py
codex-usage/: README.md  _pricing_snapshot.html  codex_usage.py  rates.example.json  rates.models.example.json  rates.openai.us.batch.json  rates.openai.us.flex.json  rates.openai.us.priority.json  rates.openai.us.standard.json
config/: AGENTS.md  README.md  accounts.yaml  cleanup_lists_trial.yaml  cleanup_scouts_speechaim.yaml  filters.yaml  filters_categories_examples.yaml  filters_current.yaml  filters_custom_mappings.yaml  filters_finance_citi.yaml  filters_finance_examples.yaml  filters_finance_td.yaml  filters_from_suggestions.yaml  filters_health.yaml  filters_kids_examples.yaml  filters_lists_examples.yaml  filters_merged.yaml  filters_news_promos.yaml  filters_now.yaml  filters_outlook_kids.yaml  filters_parent_labels.yaml  filters_politics_examples.yaml  filters_school_ycdsb.yaml  filters_school_yrdsb.yaml  filters_social_examples.yaml  filters_unified.yaml  filters_updates_examples.yaml  filters_vip_family.yaml  labels.yaml  labels_add_finance_citi.yaml  labels_add_finance_td.yaml  labels_add_personal_health.yaml  labels_add_personal_merge.yaml  labels_add_vip.yaml  labels_add_vip_vanesa.yaml  labels_after_merge.yaml  labels_current.yaml  labels_move_alumni.yaml  labels_redirect_health_to_personal.yaml  labels_redirect_vip.yaml  (+5 more)
core/: README.md  __init__.py  agentic.py  assistant.py  assistant_cli.py  auth.py  cache.py  cli_args.py  cli_errors.py  cli_framework.py  cli_output.py  collections.py  constants.py  context.py  date_utils.py  llm_cli.py  meta_base.py  patterns.py  pipeline.py  pr_workflow.py  secrets.py  testing.py  text_utils.py  textio.py  yamlio.py
desk/: .gitignore  AGENTS.md  Makefile  README.md  agentic.py  apply_ops.py  cli.py  llm_cli.py  pipeline.py  planner.py  pyproject.toml  scan.py
desk/.llm/: CONTEXT.md
desk/desk/: cli.py
desk/tests/: test_cli.py
desk_assistant/: AGENTS.md  README.md  agentic.py  llm_cli.py  pyproject.toml
(+1093 files in other folders)
