[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-assistants"
version = "0.1.0"
description = "Reconstituted personal assistants (mail, resume, schedule)"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "PyYAML==6.0.3",
  "python-docx==1.2.0",
  "google-api-python-client==2.135.0",
  "google-auth==2.34.0",
  "google-auth-httplib2==0.2.0",
  "google-auth-oauthlib==1.2.3",
  "httplib2==0.22.0",
  "msal==1.28.0",
  "numpy==1.26.4",
  "premailer==3.10.0",
  "requests==2.32.4",
  "shapely==2.0.3",
  "trimesh==4.4.0",
  "urllib3==2.6.0",
]

[project.scripts]
assistant = "core.assistant_cli:main"
mail-assistant = "mail.__main__:main"
calendar = "calendars.__main__:main"
calendar-assistant = "calendars.__main__:main"
schedule-assistant = "schedule.__main__:main"
phone = "phone.__main__:main"
phone-assistant = "phone.__main__:main"
whatsapp = "whatsapp.__main__:main"
resume-assistant = "resume.cli.main:main"
apple-music-assistant = "apple_music.__main__:main"
apple-music-user-token = "apple_music.user_token_cli:main"
wifi-assistant = "wifi.__main__:main"
wifi = "wifi.__main__:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = [
  "core*",
  "mail*",
  "resume*",
  "schedule*",
  "calendars*",
  "phone*",
  "whatsapp*",
  "apple_music*",
  "wifi*",
]
