[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "desk-assistant"
version = "0.0.1"
description = "CLI assistant to keep your macOS filesystem tidy: scan, plan, and apply rules."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Your Name"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Environment :: Console",
]
dependencies = []

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]

[project.scripts]
desk-assistant = "desk.cli:main"
